fix: remove margin and add padding to h1 for consistent spacing

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -197,6 +197,7 @@ h1 {
   font-weight: 500;
   margin-top: 0;
   margin-bottom: 3rem;
+  padding: 0 !important;
 }
 
 .header {
